--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,11 @@
 
         <ul>
             <li>
+                <span>2022-01-14</span>
+                <a href="https://onfin.github.io/literacy/instruments/crypto#_9">Обновлено: Криптовалюты/Ссылки по теме/The Web3 Fraud</a>
+                <p class=index-descr>Скорость и стоимость хранения и вычислений на блокчейне Эфира. 600КГц или 3kB/с за 250$ в секунду.</p>
+            </li>
+            <li>
                 <span>2022-01-13</span>
                 <a href="https://onfin.github.io/literacy/risk_aspects">Аспекты риска</a>
                 <p class=index-descr>Собираю здесь индекс по аспектам риска, которые необходимо учитывать при планировании портфеля и инвестиционных стратегий.</p>
@@ -255,7 +260,7 @@
                 <p class=index-descr>Вопреки распространённому мнению, довложения в портфель увеличивают его риск в смысле неопределённости ожидаемой доходности (ну и, конечно же, никак не влияют на сам размер ожидаемой доходности)</p>
             </li>
             <li>
-                <span>2022-01-08</span>
+                <span>2022-01-14</span>
                 <a href="https://onfin.github.io/literacy/instruments/crypto">Криптовалюты</a>
                 <p class=index-descr>Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные.</p>
             </li>
