--- a/calculators/credits.html
+++ b/calculators/credits.html
@@ -59,36 +59,11 @@
 <script src="/js/nunjucks.min.js" type="text/javascript"></script>
 <script defer src="/js/lodash.min.js"></script>
 <form class="calc-form" id="credit">
-<table>
-<thead>
-<tr>
-<th></th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Сумма</td>
-<td><input id="sum" type="number" step=1000 onChange="creditForm.onChange(this)" /></td>
-</tr>
-<tr>
-<td>Срок, мес</td>
-<td><input id="months" type="number" step=1 onChange="creditForm.onChange(this)" /></td>
-</tr>
-<tr>
-<td>Ставка, %г</td>
-<td><input id="interestRate" type="number" step=0.5 onChange="creditForm.onChange(this)" /></td>
-</tr>
-<tr>
-<td>Инфляция, %г</td>
-<td><input id="inflation" type="number" step=0.5 onChange="creditForm.onChange(this)" /></td>
-</tr>
-<tr>
-<td>Ставка по вложениям, %г</td>
-<td><input id="investRate" type="number" step=0.5 onChange="creditForm.onChange(this)" /></td>
-</tr>
-</tbody>
-</table>
+<label for=sum>Сумма</label> <input id="sum" type="number" step=1000 onChange="creditForm.onChange(this)" />
+<label for=months>Срок, мес</label> <input id="months" type="number" step=1 onChange="creditForm.onChange(this)" />
+<label for=interestRate>Ставка, %г</label> <input id="interestRate" type="number" step=0.5 onChange="creditForm.onChange(this)" />
+<label for=inflation>Инфляция, %г</label> <input id="inflation" type="number" step=0.5 onChange="creditForm.onChange(this)" />
+<label for=investRate>Ставка по вложениям, %г</label>  <input id="investRate" type="number" step=0.5 onChange="creditForm.onChange(this)" />
 </form>
 <section id="_2">
 <h2><a href="/calculators/credits#_2">Аннуитетное погашение</a></h2>
@@ -124,7 +99,10 @@ function toggleCollapsible(elem) {
 
     const scheduleTemplate = nunjucks.compile(`
             <p>Полная сумма платежей: {{total | round(0)}}<br>
-                С учётом инфляции: {{real | round(0)}}</p>
+                С учётом инфляции: {{real | round(0)}}<br>
+                    Первый платёж: {{(payments[0].realPayment) | round(0)}}<br>
+                    Последний платёж (с учтётом инфляции): {{(payments[payments.length-1].realPayment) | round(0)}}<br>
+            </p>
 
             <button class="collapse-btn" onClick="toggleCollapsible(this)">Расписание платежей</button>
             <div class="payment collapse-content">
